# opencode-swarm

./: .biomeignore  .gitattributes  .gitignore  .release-please-manifest.json  .secretscanignore  AGENTS.md  AI_SLOP_REVIEW.md  CHANGELOG.md  CI_TEST_TRIGGER.md  Ctemptest_output.txt  GEMINI.md  PLAN.md  README.md  TESTING.md  biome.json  contributing.md  curator-implementation-plan.md  events-defined-test-2.jsonl  events-empty-dir-test.jsonl  gemini-extension.json  knowledge-system-audit.md  knowledge-system-verification-report.md  package-lock.json  package.json  release-please-config.json  release-please-manifest.json  tech-debt-report.md  test-audit-failures.md  test-tool-schema.mjs  tsconfig.base.json  tsconfig.json
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.newsroom/: context.md
.opencode/: opencode-swarm.json  skill-routing.yaml
.swarm/: context.md  plan.json  plan.md
docs/: adding-a-language.md  architecture.md  commands.md  configuration.md  context-map.md  design-rationale.md  engineering-invariants.md  evidence-and-telemetry.md  getting-started.md  index.md  installation-linux-docker.md  installation-llm-operator.md  installation.md  knowledge.md  memory.md  modes.md  php-laravel.md  plan-durability.md  planning.md  skills.md  (+5 more)
runners/swarm-sandbox-runner/: Cargo.toml
runners/swarm-sandbox-runner/src/: acl.rs  main.rs  policy_enforce.rs  probe.rs  temp_watcher.rs
runners/swarm-sandbox-runner/src/mode/: app_container.rs  mod.rs  restricted_token.rs
runners/swarm-sandbox-runner/tests/: integration_temp_cap.rs
(+2796 files in other folders)
