[package]
name = "swarm-sandbox-runner"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Windows sandbox runner for opencode-swarm — executes commands under AppContainer or restricted-token isolation"
license = "MIT"
publish = false

[[bin]]
name = "swarm-sandbox-runner"
path = "src/main.rs"

[lib]
name = "swarm_sandbox_runner"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_System_JobObjects",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_StationsAndDesktops",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
